# UniDB

./: .gitignore  README.md  instructor_dashboard.py  instructor_management.py  login_screen.py  pyproject.toml  student_dashboard.py  student_repository.py
backend/: pyproject.toml
cli/: main.py
cli/business_logic/: instructor_management.py  student_management.py
cli/data_access/: instructor_repository.py  student_repository.py
cli/presentation/: login_screen.py  student_dashboard.py
docs/UI flows/: advisor.wsd  instructor.wsd  staff.wsd  student.wsd
docs/UI sketches/: UI00 - WelcomePage.html  UI01 - AddCourseForm.html  UI02 - AssignInstructorForm.html  UI03 - StudentEnrollmentForm.html  UI04 - WhatIfAnalysisTool.html  UI05 - GPASummaryReport.html  UI06 - TeachingScheduleView.html  UI07 - TranscriptView.html  UI08 - DepartmentReportGenerator.html  UI09 - StudentDataMaintenanceForm.html  UI10 - CourseEnrollmentList.html  UI11 - ManageStudentMajorForm.html  UI12 - LoginScreen.html  UI13 - MainDashboard.html  UI14 - ErrorNotification.html  UI15 - SuccessConfirmation.html  convert_html_to_png.sh
prisma/: schema.prisma
react-ui/: .gitignore  .prettierignore  bun.lockb  package.json  seedUsers.js  vite.config.ts
react-ui/src/: App.tsx  main.tsx  store.ts  vite-env.d.ts
src/: db.py  main.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20241017040232_init.sql  20241112153635_table-constraints.sql  20241112154522_security-triggers.sql  20241112155050_grant-privileges.sql  20241112155050_policies.sql  20241120160133_policies.sql  (+1 more)
ui/: main.py
(+52 files in other folders)
